[tool.poetry]
name = "workoutplanner"
version = "0.1.0"
description = ""
authors = ["Vishal Joshi <vjoshi@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^76.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
