[tool.poetry]
name = "workoutplanner"
version = "0.1.0"
description = "Workout APIs"
authors = ["Vishal Joshi <joshivishal2010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^76.0.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
